# StreamManager

./: .gitignore  CMakeLists.txt  README.md  build.sh  package.xml
cmake/: stream_managerConfig.cmake.in
config/: default_config.yaml  default_params.yaml
examples/: basic_usage.cpp
include/stream_manager/: stream_manager.hpp
include/stream_manager/stream_manager/: config_manager.hpp  frame_buffer.hpp  mavlink_video_source.hpp  stream_manager.hpp  usb_video_source.hpp  video_source_base.hpp
include/stream_manager_ros2/stream_manager_ros2/: gazebo_video_source.hpp
launch/: def.launch.py
lib/include/stream_manager/: config_manager.hpp  frame_buffer.hpp  gazebo_video_source.hpp  mavlink_video_source.hpp  usb_video_source.hpp  video_source_base.hpp
lib/src/: config_manager.cpp  frame_buffer.cpp  gazebo_video_source.cpp  mavlink_video_source.cpp  usb_video_source.cpp  video_source_base.cpp
src/: config_manager.cpp  frame_buffer.cpp  gazebo_video_source.cpp  mavlink_video_source.cpp  stream_manager.cpp  usb_video_source.cpp  video_source_base.cpp
test/: test_config.cpp
