<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stream_manager</name>
  <version>1.0.0</version>
  <description>A comprehensive video stream management library with multiple source support, buffering, and zero-copy shared memory</description>
  
  <maintainer email="developer@example.com">Developer</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>shm_msgs</depend>
  <depend>libboost-dev</depend>
  <depend>libyaml-cpp-dev</depend>
  
  <!-- External dependencies -->
  <depend>yaml-cpp</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>